@@ -294,23 +294,25 @@ Minor items for 0.1.2.x as time permits:
     http://wiki.noreply.org/noreply/TheOnionRouter/TorFAQ#PrivoxyWeirdSSLPort
   o even if your torrc lists yourself in your myfamily line, don't list it in
     the descriptor.
-  - Flesh out options_description array in src/or/config.c
+  . Flesh out options_description array in src/or/config.c
   - Don't let 'newnym' be triggered more often than every n seconds.
   o change log_fn() to log() on notice/warn/err logs where we can.
   X If we try to publish as a nickname that's already claimed, should
     we append a number (or increment the number) and try again? This
     way people who read their logs can fix it as before, but people
     who don't read their logs will still offer Tor servers.
-    - Fall back to unnamed; warn user; send controller event.
+?   - Fall back to unnamed; warn user; send controller event.
 ! - Tor should bind its ports before dropping privs, so users don't
     have to do the ipchains dance.
   - Rate limit exit connections to a given destination -- this helps
     us play nice with websites when Tor users want to crawl them; it
     also introduces DoS opportunities.
-! - The bw_accounting file should get merged into the state file.
-  - Streamline how we pick entry nodes.
-! - Better installers and build processes.
-    - Commit edmanm's win32 makefile to tor contrib, or write a new one.
+  o The bw_accounting file should get merged into the state file.
+? - Streamline how we pick entry nodes.
+  o Better installers and build processes.
+    X Commit edmanm's win32 makefile to tor contrib, or write a new one.
+      (Abandoned for now; mingw is now our official windows build
+       enviroment.)
   - Christian Grothoff's attack of infinite-length circuit.
     the solution is to have a separate 'extend-data' cell type
     which is used for the first N data cells, and only
